--- a/src/layouts/home.pug
+++ b/src/layouts/home.pug
@@ -1,14 +1,79 @@
 extends ./page
 
-block header
-    header#header
-        include ./layout/header.pug
-        +headerLogo()
-        h1.page-title.sr-only!= typogr.typogrify(title)
-
-block content
-    .home-content#content
-        section.home-section
+block contentWrapper
+    mixin divider
+        .row
+            .col-md-10.col-md-offset-1
+                hr.home-section-divider
+    section#content-wrapper
+        .container
+            include ./layout/warnings
+        h1.page-title.sr-only!= title
+        .home-content
+            .container
+                section.home-section.home-section-hero
+                    .row
+                        .col-md-6.col-md-offset-3
+                            != contents
+                            .center
+                                a.btn.btn-primary.home-section-hero-learn-more(href="/articles/introduction-to-effective-altruism" id=slug+"-intro-learn-more-button") Learn more&hellip;
+            .home-alternate-background
+                .container
+                    .row
+                        .col-xs-10.col-xs-offset-1.col-md-5.col-md-offset-1
+                            section.home-section.home-section-cause-prioritisation-tool
+                                - var cptLink = "/cause-prioritization-tool/"
+                                h2 Not sure what cause you&nbsp;#[br.visible-md.visible-lg]should&nbsp;work&nbsp;on?
+                                p Use our #[a(href=cptLink id=slug+"-cause-prioritisation-tool-inline") cause prioritisation tool] to find out. 
+                                a.btn.btn-default(href=cptLink id=slug+"-cause-prioritisation-tool-button") Try it now
+                        .col-xs-10.col-xs-offset-1.visible-xs.visible-sm
+                            hr.home-section-divider
+                        .col-xs-10.col-xs-offset-1.col-md-5.col-md-offset-0
+                            section.home-section.home-section-newsletter-signup
+                                h2 Join the effective&nbsp;#[br.visible-xs.visible-md.visible-lg]altruism&nbsp;newsletter
+                                p (Around one email per month, no spam)
+                                include ./components/newsletter-signup
+            .container
                 .row
-                    .col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2
-                        != contents
+                    .col-md-5.col-md-offset-1
+                        section.home-section.home-section-key-ideas
+                            h2.home-section-title Reading
+                                a.home-section-read-more-link(href="/resources/" id=slug+"-reading-read-more") Read more...
+                            ul.home-section-key-ideas-list.list-unstyled
+                                each child in seriesSets['articles'].children.slice(0,8)
+                                    li.home-section-key-ideas-idea
+                                        if child.type === 'article'
+                                            a(href=child.file.canonical id=slug+"-reading-"+child.file.slug)
+                                                != child.file.title
+                                        if child.type === 'link'
+                                            a(href=child.file.url target="_blank" id=slug+"-reading-"+slugify(child.file.url))
+                                                != child.file.title
+                                            | &nbsp;#[i.fa.fa-external-link]
+
+                    .col-md-5
+                        section.home-section.home-section-effective-altruist-profiles
+                            h2.home-section-title!= seriesSets['featured-effective-altruists'].file.title
+                                a.home-section-read-more-link(href="/community-profiles/" id=slug+"-community-profiles-read-more") Read more...
+                            .row
+                                each child in seriesSets['featured-effective-altruists'].children
+                                    .col-xs-6.col-sm-3.home-section-effective-altruist-profiles-profile
+                                        a(href=child.file.canonical id=slug+"-reading-"+child.file.slug)
+                                            .home-section-effective-altruist-profiles-profile-image-wrapper
+                                                .content
+                                                    img.img-responsive.home-section-effective-altruist-profiles-profile-image(src=child.file.photo.fields.file.url)
+                                            p.home-section-effective-altruist-profiles-profile-title!= child.file.title
+                +divider
+                section.home-section.home-section-quotations
+                    .row
+                        .col-md-10.col-md-offset-1
+                            .row
+                                each child in seriesSets['quotations-on-effective-altruism'].children
+                                    - var quotation = child.file
+                                    .col-md-6
+                                        include ./components/quotation
+                section.home-section.home-section-media
+                    .row
+                        .col-md-10.col-md-offset-1
+                            h2.home-section-title Effective altruism in the media
+                                a.home-section-read-more-link(href="/media/" id="home-link-readmore-media") More...
+                            include ./components/media-highlights
