--- a/src/styles/partials/_components.scss
+++ b/src/styles/partials/_components.scss
@@ -5,6 +5,7 @@
 @import 'components/heading-permalink';
 @import 'components/media-list';
 @import 'components/newsletter-signup';
+@import 'components/people-list';
 @import 'components/quotation';
 @import 'components/table-of-contents';
 
